--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="Secondary_Normal">#2e268e</color>
     <color name="Secondary_Darker">#100d32</color>
     <color name="Secondary_Light">#eae9f4</color>
-    <color name="Gray">#4E4B59</color>
+    <color name="Gray">#929292</color>
     <color name="GrayViolet">#E6E6E6</color>
     <color name="GrayLow">#4E4B59</color>
 
