--- a/app/src/main/res/drawable/background_splash_screen.xml
+++ b/app/src/main/res/drawable/background_splash_screen.xml
@@ -5,7 +5,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/logoapp"/>
+            android:src="@drawable/logo_app"/>
     </item>
 
 
