--- a/app/src/main/res/layout/check_now.xml
+++ b/app/src/main/res/layout/check_now.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
-    tools:context=".CheckNow">
+    tools:context=".CheckNow"
+    tools:ignore="ExtraText">
 
     <include
         android:id="@+id/header"
@@ -15,12 +16,12 @@
         android:id="@+id/card"
         android:layout_width="350dp"
         android:layout_height="215dp"
-        android:layout_marginTop="134dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/shadow"
         app:cardBackgroundColor="@color/Primary_Light"
         app:cardCornerRadius="20dp"
         app:cardElevation="7dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -28,7 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+
+            >
 
             <LinearLayout
                 android:id="@+id/top_row"
@@ -79,28 +82,34 @@
                     android:id="@+id/item4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Item 4"
-                    android:layout_marginEnd="16dp" />
+                    android:text="44 ms"
+                    android:textSize="20dp"
+                    android:layout_marginEnd="16dp"
+
+                    />
+
 
                 <TextView
                     android:id="@+id/item5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Item 5"
+                    android:text="84 bpm"
+                    android:textSize="20dp"
                     android:layout_marginEnd="16dp" />
 
                 <TextView
                     android:id="@+id/item6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Item 6" />
+                    android:textSize="20dp"
+                    android:text="44spO2" />
             </LinearLayout>
 
             <Button
                 android:layout_gravity="center_horizontal"
                 android:layout_width="200dp"
                 android:layout_height="60dp"
-                android:text="@string/login"
+                android:text="check now"
                 android:textColor="@color/white"
                 android:layout_marginTop="20dp"
                 android:textSize="18sp"
@@ -109,6 +118,210 @@
                 android:id="@+id/check_btn"/>
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card2"
+        android:layout_width="350dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/Primary_Light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="7dp"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="216dp"
+            android:layout_height="wrap_content"
+            android:text="SAMID rastrea a tus pacientes instantantaneamente."
+            android:elevation="14dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="17dp"
+            android:layout_weight="1"
+            android:textSize="11.5sp"
+            android:fontFamily="@font/montserrat">
+
+        </TextView>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="240dp"
+            android:elevation="12dp"
+            android:layout_marginTop="34dp">
+
+
+            <ImageView
+                android:id="@+id/circuloGrande"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/circle"
+                android:elevation="10dp"
+                android:scaleType="fitXY"
+                app:tint="@color/white" />
+
+
+            <ImageView
+                android:id="@+id/circuloChico"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:src="@drawable/circle"
+                android:elevation="11dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"
+                app:tint="@color/moradoFuerte" />
+
+
+            <ImageView
+                android:id="@+id/location"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/location_pin_svgrepo_com"
+                android:elevation="12dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"
+                app:tint="@color/white" />
+
+        </FrameLayout>
+
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="80.2dp"
+            android:layout_gravity="top"
+            android:src="@drawable/layered_background"
+            android:elevation="9dp"
+            android:scaleType="fitXY">
+
+        </ImageView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Encuentra a tu paciente"
+            android:elevation="14dp"
+            android:textColor="@color/azulfuerte"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_weight="1"
+            android:textSize="17sp"
+            android:fontFamily="@font/montserrat_bold">
+
+        </TextView>
+
+
+
+
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card3"
+        android:layout_width="350dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/Primary_Light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card2"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="7dp"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:text="Si el paciente necesita medicación, puedes programar alarmas con samid"
+            android:elevation="14dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="17dp"
+            android:layout_weight="1"
+            android:textSize="11.5sp"
+            android:fontFamily="@font/montserrat">
+
+        </TextView>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="240dp"
+            android:elevation="12dp"
+            android:layout_marginTop="34dp">
+
+
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/circle"
+                android:elevation="10dp"
+                android:scaleType="fitXY"
+                app:tint="@color/white" />
+
+
+            <ImageView
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:src="@drawable/circle"
+                android:elevation="11dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"
+                app:tint="@color/moradoFuerte" />
+
+
+            <ImageView
+                android:id="@+id/reloj"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/clock"
+                android:elevation="12dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"
+                app:tint="@color/white" />
+
+        </FrameLayout>
+
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="80.2dp"
+            android:layout_gravity="top"
+            android:src="@drawable/layered_background"
+            android:elevation="9dp"
+            android:scaleType="fitXY">
+
+        </ImageView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Configurar alarmas"
+            android:elevation="14dp"
+            android:textColor="@color/azulfuerte"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_weight="1"
+            android:textSize="17sp"
+            android:fontFamily="@font/montserrat_bold">
+
+        </TextView>
+
+
+
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
