--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="Gray">#929292</color>
     <color name="GrayViolet">#E6E6E6</color>
     <color name="GrayLow">#4E4B59</color>
+    <color name="moradoFuerte">#7D66D8</color>
+
 
 
 </resources>
