pantallas inicio, pacientes, check now y alarma linkeadas. Pantalla alarmas hecha

--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/GrayViolet" />
-    <corners android:radius="16dp" /> <!-- Ajusta el radio según lo que necesites -->
-    <stroke
-        android:width="2dp"
-        android:color="@color/GrayViolet" /> <!-- Opcional: si quieres un borde alrededor -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="8dp"/>
+    <solid android:color="@color/Primary_Light"/> <!-- Cambia a un color que contrastará bien -->
 </shape>
