--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="GrayViolet">#E6E6E6</color>
     <color name="GrayLow">#4E4B59</color>
     <color name="moradoFuerte">#7D66D8</color>
+    <color name="light_gray">#B0B0B0</color>
 
 
 
