--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,8 @@
     <color name="GrayLow">#4E4B59</color>
     <color name="moradoFuerte">#7D66D8</color>
     <color name="light_gray">#B0B0B0</color>
+    <color name="Red">#FB3C3C</color>
+
 
 
 
