--- a/app/src/main/res/layout/weekly_stats.xml
+++ b/app/src/main/res/layout/weekly_stats.xml
@@ -21,62 +21,291 @@
             android:id="@+id/user_weekly_stats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/user_s_weekly_stats"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="@font/montserrat_regular"
+            android:hint="@string/an_lisis_semanal_de_manuel"
+            android:fontFamily="@font/montserrat_bold"
             android:textColorHint="#2E268E"
-            android:textSize="30sp"
-            android:layout_marginTop="150dp"
+            android:textSize="20sp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="110dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/switch_ic"
+            android:layout_marginTop="110dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/user_weekly_stats" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
-            android:background="@drawable/rounded_corners"
+            android:background="@drawable/shadow"
+            app:cardBackgroundColor="@color/Primary_Light"
             android:layout_width="350dp"
             android:layout_height="300dp"
             app:cardCornerRadius="15dp"
             android:elevation="20dp"
-            app:layout_constraintTop_toTopOf="@id/user_weekly_stats"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/user_weekly_stats"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/first_line"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/primary_vertical_line"
-            android:elevation="13dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginStart="30dp"
-            app:layout_constraintBottom_toBottomOf="@id/card"
-            app:layout_constraintStart_toStartOf="@id/card"/>
+            <!-- Contenedor de las líneas dentro del CardView -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/secondary_vertical_line"
-            android:elevation="13dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginStart="10dp"
-            app:layout_constraintBottom_toBottomOf="@id/card"
-            app:layout_constraintStart_toStartOf="@id/first_line"/>
+                <!-- Lunes -->
 
+                <ImageView
+                    android:id="@+id/first_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="40dp"
+                    android:elevation="13dp"
+                    android:src="@drawable/primary_vertical_line"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/second_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/first_line" />
+
+                <TextView
+                    android:id="@+id/lunes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="L"
+                    android:textSize="25dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/first_line"
+                    app:layout_constraintEnd_toEndOf="@id/second_line"
+                    android:layout_marginBottom="8dp" />
+
+                <!-- Martes -->
+                <ImageView
+                    android:id="@+id/third_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="180dp"
+                    android:src="@drawable/primary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="60dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/forth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/third_line" />
+
+                <TextView
+                    android:id="@+id/martes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="M"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/third_line"
+                    app:layout_constraintEnd_toEndOf="@id/forth_line"
+                    android:layout_marginBottom="8dp" />
+
+                <!-- Miércoles -->
+                <ImageView
+                    android:id="@+id/fifth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/primary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="100dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/sixth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/fifth_line" />
+
+                <TextView
+                    android:id="@+id/miercoles"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="M"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/fifth_line"
+                    app:layout_constraintEnd_toEndOf="@id/sixth_line"
+                    android:layout_marginBottom="8dp" />
+
+                <!-- Jueves -->
+                <ImageView
+                    android:id="@+id/seventh_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="240dp"
+                    android:src="@drawable/primary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="150dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/eigth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="155dp"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/seventh_line" />
+
+                <TextView
+                    android:id="@+id/jueves"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="J"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/seventh_line"
+                    app:layout_constraintEnd_toEndOf="@id/eigth_line"
+                    android:layout_marginBottom="8dp" />
+
+                <!-- Viernes -->
+                <ImageView
+                    android:id="@+id/nineth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="190dp"
+                    android:src="@drawable/primary_vertical_line"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="200dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/tenth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="220dp"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/nineth_line" />
+
+                <TextView
+                    android:id="@+id/viernes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="V"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/nineth_line"
+                    app:layout_constraintEnd_toEndOf="@id/tenth_line"
+                    android:layout_marginBottom="8dp" />
+
+                <!-- Sábado -->
+                <ImageView
+                    android:id="@+id/eleventh_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="140dp"
+                    android:src="@drawable/primary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="250dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/twelfth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="170dp"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/eleventh_line" />
+
+                <TextView
+                    android:id="@+id/sabado"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/eleventh_line"
+                    app:layout_constraintEnd_toEndOf="@id/twelfth_line"
+                    android:layout_marginBottom="8dp" />
+
+                <!-- Domingo -->
+                <ImageView
+                    android:id="@+id/thirteenth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="220dp"
+                    android:src="@drawable/primary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="300dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/fourteenth_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="160dp"
+                    android:src="@drawable/secondary_vertical_line"
+                    android:elevation="13dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/thirteenth_line" />
+
+                <TextView
+                    android:id="@+id/domingo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="D"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/thirteenth_line"
+                    app:layout_constraintEnd_toEndOf="@id/fourteenth_line"
+                    android:layout_marginBottom="8dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:itemIconTint="@color/Primary_Dark"
-        app:itemTextColor="@color/Primary_Dark"
-        app:menu="@menu/nav_menu"
-        android:background="@color/white"
-        android:layout_marginTop="20dp" />
+        app:menu="@menu/nav_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
