--- a/app/src/main/res/layout/weekly_stats.xml
+++ b/app/src/main/res/layout/weekly_stats.xml
@@ -53,12 +53,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- Contenedor de las líneas dentro del CardView -->
+            <!--
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <!-- Lunes -->
+            -->
+                <!--
 
                 <ImageView
                     android:id="@+id/first_line"
@@ -92,8 +92,8 @@
                     app:layout_constraintStart_toStartOf="@id/first_line"
                     app:layout_constraintEnd_toEndOf="@id/second_line"
                     android:layout_marginBottom="8dp" />
-
-                <!-- Martes -->
+                -->
+                <!--
                 <ImageView
                     android:id="@+id/third_line"
                     android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
                 <ImageView
                     android:id="@+id/forth_line"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="170dp"
                     android:src="@drawable/secondary_vertical_line"
                     android:elevation="13dp"
                     android:layout_marginBottom="30dp"
@@ -125,8 +125,8 @@
                     app:layout_constraintStart_toStartOf="@id/third_line"
                     app:layout_constraintEnd_toEndOf="@id/forth_line"
                     android:layout_marginBottom="8dp" />
-
-                <!-- Miércoles -->
+                -->
+                <!-- Miércoles
                 <ImageView
                     android:id="@+id/fifth_line"
                     android:layout_width="wrap_content"
@@ -159,8 +159,8 @@
                     app:layout_constraintStart_toStartOf="@id/fifth_line"
                     app:layout_constraintEnd_toEndOf="@id/sixth_line"
                     android:layout_marginBottom="8dp" />
-
-                <!-- Jueves -->
+                    -->
+                <!-- Jueves
                 <ImageView
                     android:id="@+id/seventh_line"
                     android:layout_width="wrap_content"
@@ -193,8 +193,8 @@
                     app:layout_constraintStart_toStartOf="@id/seventh_line"
                     app:layout_constraintEnd_toEndOf="@id/eigth_line"
                     android:layout_marginBottom="8dp" />
-
-                <!-- Viernes -->
+                -->
+                <!-- Viernes
                 <ImageView
                     android:id="@+id/nineth_line"
                     android:layout_width="wrap_content"
@@ -225,8 +225,8 @@
                     app:layout_constraintStart_toStartOf="@id/nineth_line"
                     app:layout_constraintEnd_toEndOf="@id/tenth_line"
                     android:layout_marginBottom="8dp" />
-
-                <!-- Sábado -->
+                -->
+                <!-- Sábado
                 <ImageView
                     android:id="@+id/eleventh_line"
                     android:layout_width="wrap_content"
@@ -259,8 +259,8 @@
                     app:layout_constraintStart_toStartOf="@id/eleventh_line"
                     app:layout_constraintEnd_toEndOf="@id/twelfth_line"
                     android:layout_marginBottom="8dp" />
-
-                <!-- Domingo -->
+                -->
+                <!-- Domingo
                 <ImageView
                     android:id="@+id/thirteenth_line"
                     android:layout_width="wrap_content"
@@ -294,7 +294,7 @@
                     app:layout_constraintEnd_toEndOf="@id/fourteenth_line"
                     android:layout_marginBottom="8dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
+                -->
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -349,14 +349,16 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
+        app:menu="@menu/nav_menu"
+        android:layout_marginTop="50dp"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu" />
+        android:background="@color/white"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
