--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -9,6 +9,10 @@
     tools:context=".AlarmActivity"
     android:background="@color/white">
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/go_back_header" />
+
     <TextView
         android:id="@+id/tituloAlarma"
         android:layout_width="wrap_content"
@@ -49,11 +53,31 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="440dp"
         android:layout_gravity="top"
         android:scaleType="fitXY"
         android:src="@drawable/layered_background"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/nombrePaciente"
+        android:singleLine="true"
+        android:maxLines="1"
+        app:layout_constraintBottom_toTopOf="@id/nombreAlarma"
+        app:layout_constraintStart_toStartOf="@id/selectTimeBtn"
+        app:layout_constraintEnd_toEndOf="@id/selectTimeBtn"
+        android:layout_marginBottom="15dp"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:elevation="11dp"
+        android:textColorHint="@color/black"
+        android:hint="Nombre del paciente"
+        android:fontFamily="@font/montserrat"
+
+        android:background="@drawable/rounded_edittext"
+        android:padding="8dp">
+    </androidx.appcompat.widget.AppCompatEditText>
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/nombreAlarma"
@@ -101,7 +125,7 @@
         android:id="@+id/setAlarmBtn"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:background="@android:color/system_outline_variant_dark"
+        android:background="@drawable/shadow"
         app:layout_constraintTop_toBottomOf="@id/descripcionAlarma"
         app:layout_constraintStart_toStartOf="@id/descripcionAlarma"
         app:layout_constraintEnd_toEndOf="@id/descripcionAlarma"
