--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,138 +1,111 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:padding="16dp"
     android:background="@color/white"
     tools:context=".MainActivity2">
 
-    <ImageView
-        android:id="@+id/logo_image"
-        android:layout_width="350dp"
-        android:layout_height="250dp"
-        android:contentDescription="@string/logo"
-        android:src="@drawable/new_logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-        android:id="@+id/name_input"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/shadow"
-        android:fontFamily="@font/montserrat"
-        android:hint="@string/name"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:padding="6dp"
-        android:elevation="6dp"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/logo_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-        android:id="@+id/last_name_input"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/shadow"
-        android:fontFamily="@font/montserrat"
-        android:hint="@string/last_name"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:padding="6dp"
-        android:elevation="6dp"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/name_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-        android:id="@+id/email_register_input"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/shadow"
-        android:fontFamily="@font/montserrat"
-        android:hint="@string/email"
-        android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
-        android:padding="6dp"
-        android:elevation="6dp"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/last_name_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-        android:id="@+id/password_input"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/shadow"
-        android:elevation="6dp"
-        android:fontFamily="@font/montserrat"
-        android:hint="@string/password"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:padding="6dp"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/email_register_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
-        android:id="@+id/register_btn"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/rounded_button"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="@string/register"
-        android:textColor="@color/Secondary_Light"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/password_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/already_have_account"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="40dp"
-        android:fontFamily="@font/montserrat_regular"
-        android:text="@string/ya_tienes_una_cuenta"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/register_btn"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
-    <TextView
-        android:id="@+id/inicia_sesion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_regular"
-        android:text="@string/inicia_sesi_n"
-        android:textColor="@color/Primary_Normal"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/register_btn"
-        app:layout_constraintStart_toEndOf="@id/already_have_account"/>
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="250dp"
+            android:contentDescription="@string/logo"
+            android:src="@drawable/logo_app" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="48dp"
+            android:hint="@string/name"
+            android:importantForAutofill="no"
+            android:textColor="#9D9D9D"
+            android:textColorHint="#9D9D9D"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:fontFamily="@font/montserrat"
+            android:inputType="text"
+            android:background="@drawable/shadow"
+            android:elevation="12dp"
+            android:id="@+id/name_input"
+            android:layout_marginTop="8dp"/>
+
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="48dp"
+            android:hint="@string/last_name"
+            android:importantForAutofill="no"
+            android:textColor="#9D9D9D"
+            android:textColorHint="#9D9D9D"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:fontFamily="@font/montserrat"
+            android:background="@drawable/shadow"
+            android:elevation="12dp"
+            android:inputType="text"
+            android:id="@+id/last_name_input"
+            android:layout_marginTop="16dp"/>
+
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="48dp"
+            android:hint="@string/email"
+            android:importantForAutofill="no"
+            android:textColor="#9D9D9D"
+            android:textColorHint="#9D9D9D"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:fontFamily="@font/montserrat"
+            android:background="@drawable/shadow"
+            android:elevation="12dp"
+            android:id="@+id/email_register_input"
+            android:layout_marginTop="16dp"
+            tools:ignore="TextFields" />
+
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="48dp"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
+            android:textColor="#9D9D9D"
+            android:textColorHint="#9D9D9D"
+            android:textSize="20sp"
+            android:padding="6dp"
+            android:fontFamily="@font/montserrat"
+            android:background="@drawable/shadow"
+            android:elevation="12dp"
+            android:inputType="textPassword"
+            android:id="@+id/password_input"
+            android:layout_marginTop="16dp"/>
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:text="@string/register"
+            android:textColor="@color/Secondary_Light"
+            android:layout_marginTop="20dp"
+            android:textSize="18sp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/montserrat_bold"
+            android:id="@+id/register_btn"/>
+
+        <TextView
+            android:layout_width="210dp"
+            android:layout_height="20dp"
+            android:text="@string/i_have_already_an_account"
+            android:textColor="@color/black"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="132dp"
+            android:fontFamily="@font/montserrat"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
